[package]
name = "bevy_third_person_camera"
version = "0.1.10"
edition = "2021"
description = "A third person camera written for Bevy"
keywords = ["bevy", "camera", "orbit", "gamedev"]
categories = ["game-development"]
license = "MIT"
repository = "https://github.com/ka-de/bevy_third_person_camera"
homepage = "https://github.com/AndrewCS149/bevy_third_person_camera"
readme = "README.md"
exclude = ["assets/*", "migrationGuides/*"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
